force-app/main/default/objects/Finance_Transactions__c/Finance_Transactions__c.object-meta.xml
<CustomObject>
    <label>Finance Transactions</label>
    <nameField>
        <displayFormat>FT - {0000}</displayFormat>
        <label>Finance Transactions Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>