force-app/main/default/objects/Finance_Transactions__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Deals__c</referenceTo>
    <relationshipLabel>Finance Transactions</relationshipLabel>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>