force-app/main/default/objects/Finance_Transactions__c/fields/Sales_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Confirmation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Confirmation</label>
    <referenceTo>Sales_Confirmation__c</referenceTo>
    <relationshipLabel>Finance Transactions</relationshipLabel>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>